--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.6.4",
     "@humeai/voice": "^0.1.6",
     "@humeai/voice-react": "^0.1.6",
     "@radix-ui/react-slot": "^1.0.2",
